Fix header width on mobile

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -153,7 +153,7 @@
     position: absolute
     left: 50%
     transform: translateX(-50%)
-    bottom: -455px
+    bottom: -380px
     padding: 15px 25px
     font-weight: 500
     white-space: nowrap
@@ -162,7 +162,8 @@
 
   .furnaces__gallery
     position: absolute
-    bottom: -315px
+    bottom: -240px
+    padding: 0 35px
     width: 100%
 
   .furnaces__slider
@@ -192,15 +193,10 @@
         transform: scale(1) rotate(135deg)
       &:active 
         transform: scale(.8) rotate(135deg)
-      
-
-
-  
-
-
-
+    
 /* <576px (auto) */
 +media-breakpoint-down(xs)
+
  
 
 
