--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -9,7 +9,7 @@
 
 body
 	min-height: 1000px
-	min-width: 500px
+	min-width: 320px
 	font-family: $main-font
 	font-size: 21px
 
